# step-gen-suite

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
public/noteskins/: .gitignore
public/noteskins/z3phoenix/: README.md
sidecar/: main.py  requirements.txt
sidecar/music_analysis/: analyze_song.py  requirements.txt
sidecar/music_analysis/schemas/: song_analysis_report.v1.schema.json
sidecar/music_analysis/tests/: test_analyzer.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  gemini.rs  generation_context.rs  guardrail_calibration.rs  lib.rs  main.rs  multi_section_orchestration.rs  music_analysis.rs  section_continuity.rs  settings.rs
src-tauri/src/biomechanics/: mod.rs
src-tauri/src/ssc/: parser.rs
src-tauri/src/ssc/test_fixtures/: mini_sample.ssc
src/components/: GameplayBackground.tsx  GenerationBlurOverlay.tsx  Navbar.tsx  WizardFooter.tsx
src/features/music-analysis/browser-bpm/: analyzeBrowserBpmFromBuffer.ts  browserBpmAliases.ts  browserBpmReconciliation.ts  browserBpmSupport.ts  browserBpmTypes.ts
src/screens/: CreateSongWizard.tsx  DevToolsScreen.tsx  ImportEditSong.tsx  ProjectWorkspace.tsx  SettingsScreen.tsx  StartMenu.tsx
src/store/: settingsStore.ts  songProjectStore.ts
src/types/: musicAnalysis.ts  song.ts
src/utils/: BGCharts.ts  ProjectWorkspaceHelpers.ts
src/utils/__tests__/: ProjectWorkspaceHelpers.test.ts
(+1 files in other folders)
