[package]
name = "ai-step-gen-suite"
version = "0.1.0-alpha.7"
description = "AI Step Gen Suite"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_step_gen_suite_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
zeroize = { version = "1.7.0", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
tauri-plugin-dialog = "2"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }




